feat - refactored AccountEntry to reflect domain model and be more efficient